# installscript-decompiler

./: ActionScript.bt  CMakeLists.txt  InstallShieldDecompiler.sln  LICENSE  README.md  actionscript.grammar  libfile.grammar
Compiler/: Compiler.vcxproj  Compiler.vcxproj.filters
InstallShieldDecompiler/: AbortAction.cpp  AbortAction.h  Action.cpp  Action.h  ActionFile.cpp  ActionFile.h  ActionWithArgs.cpp  AddressOfAction.cpp  AddressOfAction.h  AddressOfExpression.cpp  AddressOfExpression.h  AddressOfWideAction.cpp  AddressOfWideAction.h  ArrayAccessExpression.cpp  ArrayAccessExpression.h  AssignAction.cpp  AssignAction.h  BasicBlock.cpp  BasicBlock.h  BinaryAction.h  BinaryExpression.cpp  BinaryExpression.h  BindVariableAction.cpp  BindVariableAction.h  CNumConst.h  CStrConst.cpp  CStrConst.h  CompilerDLL.cpp  CompilerDLL.h  DLLFuncCallAction.cpp  DLLFuncCallAction.h  DLLPrototype.cpp  DLLPrototype.h  DataDeclList.cpp  DataDeclList.h  Decompiler.cpp  Decompiler.h  EndCatchAction.cpp  EndCatchAction.h  EndFuncAction.cpp  (+74 more)
src/: main.cpp
src/Decompiler/: AbstractVisitor.h  Decompiler.cpp  Decompiler.h  Function.cpp  Function.h  GraphVizPrinter.cpp  GraphVizPrinter.h
src/Decompiler/CFG/: BasicBlock.cpp  BasicBlock.h  ControlFlowGraph.cpp  ControlFlowGraph.h
src/Decompiler/IRGen/: IRGenerator.cpp  IRGenerator.h  IRStatements.cpp  IRStatements.h
src/Decompiler/Parser/: Expressions.cpp  Expressions.h  Parser.cpp  Parser.h
src/Decompiler/Variables/: NumberVariable.cpp  NumberVariable.h  StringVariable.cpp  StringVariable.h  SymbolTable.cpp  SymbolTable.h  Variable.cpp  Variable.h  VariantVariable.cpp  VariantVariable.h
src/Frontend/: CMakeLists.txt
src/Frontend/InstallShield_Common/: Action.cpp  Action.h  CMakeLists.txt  DataDeclList.cpp  DataDeclList.h  Frontend.cpp  Frontend.h  HeaderKind.h  IArgument.cpp  ISBasicBlock.cpp  ISBasicBlock.h  NumConst.cpp  NumConst.h  ScriptExtern.cpp  ScriptExtern.h  ScriptFunction.h  ScriptPrototype.cpp  ScriptPrototype.h  ScriptStruct.cpp  ScriptStruct.h  StrConst.cpp  StreamPtr.h  Type.h  vararg.h
src/Frontend/InstallShield_Common/ActionFile/: ActionFile.cpp  ActionFile.h
src/Frontend/InstallShield_Common/Wrapper/: LibFile.h
src/Frontend/InstallShield_New/: CMakeLists.txt  IScript.cpp  IScript.h
src/Frontend/InstallShield_New/Actions/: AbortAction.cpp  AbortAction.h  Action.cpp  Action.h  ActionWithArgs.cpp  ActionWithArgs.h  AddressOfAction.cpp  AddressOfAction.h  AddressOfWideAction.cpp  AddressOfWideAction.h  AssignAction.cpp  AssignAction.h  BinaryAction.cpp  BinaryAction.h  BindVariableAction.cpp  BindVariableAction.h  DLLFuncCallAction.cpp  DLLFuncCallAction.h  DoHandlerAction.cpp  DoHandlerAction.h  EndCatchAction.cpp  EndCatchAction.h  EndFuncAction.cpp  EndFuncAction.h  EndTryAction.cpp  EndTryAction.h  ExitAction.cpp  ExitAction.h  FuncCallAction.cpp  FuncCallAction.h  FuncPrologAction.cpp  FuncPrologAction.h  GetByteAction.cpp  GetByteAction.h  GotoAction.cpp  GotoAction.h  HandlerAction.cpp  HandlerAction.h  HandlerExAction.cpp  HandlerExAction.h  (+42 more)
src/Frontend/InstallShield_New/Prototype/: DLLPrototype.cpp  DLLPrototype.h  InternalPrototype.cpp  InternalPrototype.h  Prototype.cpp  Prototype.h
src/Frontend/InstallShield_New/Struct/: Struct.cpp  Struct.h
src/Frontend/InstallShield_New/Wrapper/: LibFile.cpp  LibFile.h
src/Frontend/InstallShield_Old/: CMakeLists.txt  IScript.cpp  IScript.h
src/Frontend/InstallShield_Old/Actions/: Action.cpp  Action.h  ActionWithArgs.cpp  ActionWithArgs.h  AssignAction.cpp  AssignAction.h  AssignNumConstAction.cpp  AssignNumConstAction.h  AssignStringConstAction.cpp  AssignStringConstAction.h  BinaryAction.cpp  BinaryAction.h  DisableAction.cpp  DisableAction.h  EnableAction.cpp  EnableAction.h  FuncPrologAction.cpp  FuncPrologAction.h  GotoAction.cpp  GotoAction.h  IfAction.cpp  IfAction.h  InternalFuncCallAction.cpp  InternalFuncCallAction.h  LoadStringConstantAction.cpp  LoadStringConstantAction.h  NopAction.cpp  NopAction.h  PlaceholderAction.cpp  PlaceholderAction.h  PropGetAction.cpp  PropGetAction.h  PropPutAction.cpp  PropPutAction.h  ReturnAction.cpp  ReturnAction.h  ReturnEmptyAction.cpp  ReturnEmptyAction.h  ReturnFromProgramAction.cpp  ReturnFromProgramAction.h  (+4 more)
src/InstallShield/: CNumConst.cpp  CNumConst.h  CStrConst.cpp  CStrConst.h  DataDeclList.cpp  DataDeclList.h  IArgument.h  ISBasicBlock.cpp  ISBasicBlock.h  IScript.cpp  IScript.h  StreamPtr.cpp  Type.cpp  Type.h  vararg.cpp  vararg.h
src/InstallShield/ActionFile/: ActionFile.h
src/InstallShield/Actions/: AbortAction.cpp  AbortAction.h  Action.cpp  Action.h  ActionWithArgs.h  AddressOfAction.cpp  AddressOfAction.h  AddressOfWideAction.cpp  AddressOfWideAction.h  AssignAction.cpp  AssignAction.h  BinaryAction.cpp  BinaryAction.h  BindVariableAction.cpp  BindVariableAction.h  DLLFuncCallAction.cpp  DLLFuncCallAction.h  DoHandlerAction.cpp  DoHandlerAction.h  EndCatchAction.cpp  EndCatchAction.h  EndFuncAction.cpp  EndFuncAction.h  EndTryAction.cpp  EndTryAction.h  ExitAction.cpp  ExitAction.h  FuncCallAction.h  FuncPrologAction.cpp  FuncPrologAction.h  GetByteAction.cpp  GetByteAction.h  GotoAction.cpp  GotoAction.h  HandlerAction.cpp  HandlerAction.h  HandlerExAction.cpp  HandlerExAction.h  IfAction.cpp  IfAction.h  (+39 more)
src/InstallShield/Prototype/: DLLPrototype.cpp  InternalPrototype.cpp  Prototype.cpp
src/InstallShield/Struct/: Struct.cpp
src/InstallShield/Wrapper/: LibFile.cpp  LibFile.h
